@@ -35,7 +35,9 @@ package jdk.internal.org.commonmark.renderer.html;
 import jdk.internal.org.commonmark.node.*;
 import jdk.internal.org.commonmark.renderer.NodeRenderer;
 
-import java.util.*;
+import java.util.LinkedHashMap;
+import java.util.Map;
+import java.util.Set;
 
 /**
  * The node renderer that renders all the core nodes (comes last in the order of node renderers).
@@ -52,7 +54,7 @@ public class CoreHtmlNodeRenderer extends AbstractVisitor implements NodeRendere
 
     @Override
     public Set<Class<? extends Node>> getNodeTypes() {
-        return new HashSet<>(Arrays.asList(
+        return Set.of(
                 Document.class,
                 Heading.class,
                 Paragraph.class,
@@ -73,7 +75,7 @@ public class CoreHtmlNodeRenderer extends AbstractVisitor implements NodeRendere
                 HtmlInline.class,
                 SoftLineBreak.class,
                 HardLineBreak.class
-        ));
+        );
     }
 
     @Override
@@ -99,13 +101,15 @@ public class CoreHtmlNodeRenderer extends AbstractVisitor implements NodeRendere
 
     @Override
     public void visit(Paragraph paragraph) {
-        boolean inTightList = isInTightList(paragraph);
-        if (!inTightList) {
+        boolean omitP = isInTightList(paragraph) || //
+                (context.shouldOmitSingleParagraphP() && paragraph.getParent() instanceof Document && //
+                        paragraph.getPrevious() == null && paragraph.getNext() == null);
+        if (!omitP) {
             html.line();
             html.tag("p", getAttrs(paragraph, "p"));
         }
         visitChildren(paragraph);
-        if (!inTightList) {
+        if (!omitP) {
             html.tag("/p");
             html.line();
         }
@@ -167,7 +171,7 @@ public class CoreHtmlNodeRenderer extends AbstractVisitor implements NodeRendere
 
     @Override
     public void visit(IndentedCodeBlock indentedCodeBlock) {
-        renderCodeBlock(indentedCodeBlock.getLiteral(), indentedCodeBlock, Collections.<String, String>emptyMap());
+        renderCodeBlock(indentedCodeBlock.getLiteral(), indentedCodeBlock, Map.of());
     }
 
     @Override
@@ -319,7 +323,7 @@ public class CoreHtmlNodeRenderer extends AbstractVisitor implements NodeRendere
     }
 
     private Map<String, String> getAttrs(Node node, String tagName) {
-        return getAttrs(node, tagName, Collections.<String, String>emptyMap());
+        return getAttrs(node, tagName, Map.of());
     }
 
     private Map<String, String> getAttrs(Node node, String tagName, Map<String, String> defaultAttributes) {
@@ -337,6 +341,11 @@ public class CoreHtmlNodeRenderer extends AbstractVisitor implements NodeRendere
         @Override
         public void visit(Text text) {
             sb.append(text.getLiteral());
+        }
+
+        @Override
+        public void visit(Code code) {
+            sb.append(code.getLiteral());
         }
 
         @Override
